--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dialogflow-fulfillment": "^0.6.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.5.1"
+    "mongoose": "^6.5.1",
+    "ngrok": "^4.3.1"
   }
 }
